[package]
name = "rusty-blocks"
version = "0.1.0"
edition = "2021"

[lib]
name = "blockchainlib"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
hex = "0.4.3"
